# NovaPhy

./: Doxyfile  README.md  build_docs.ps1  build_docs.sh  claude.md  pyproject.toml
.github/workflows/: ci.yml
demos/: demoSim_ppo_inverted_pendulum.py  demo_dominoes.py  demo_double_pendulum.py  demo_friction_ramp.py  demo_hinge.py  demo_joint_chain.py  demo_newtons_cradle.py  demo_performance_monitor.py  demo_pyramid.py  demo_rope_bridge.py  demo_stack.py  demo_utils.py  demo_wall_break.py
docs/: conf.py  cpp_api.rst  index.rst  python_api.rst  requirements.txt
docs/doxygen_output/latex/: aabb_8h_source.tex  annotated.tex  articulated__solver_8cpp.tex  articulated__solver_8h_source.tex  articulation_8h_source.tex  body_8cpp.tex  body_8h_source.tex  broadphase_8cpp.tex  broadphase_8h_source.tex  (+54 more)
include/novaphy/: novaphy.h  novaphy_types.h
python/bindings/: CMakeLists.txt  bind_collision.cpp  bind_core.cpp  bind_dynamics.cpp  bind_main.cpp  bind_math.cpp  bind_performance.cpp  bind_sim.cpp
python/novaphy/: __init__.py  viz.py
src/: CMakeLists.txt  stub.cpp
src/collision/: broadphase.cpp  narrowphase.cpp
src/core/: body.cpp  joint.cpp  model_builder.cpp  shape.cpp
src/dynamics/: articulated_solver.cpp  featherstone.cpp  free_body_solver.cpp  integrator.cpp
src/fluid/: fluid_world.cpp  pbf_solver.cpp
src/math/: math_utils.cpp  spatial.cpp
src/sim/: performance_monitor.cpp  state.cpp  world.cpp
tests/python/: benchmark_rigid_1000.py  test_articulated_sim.py  test_demo_performance_monitor.py  test_free_body_sim.py  test_performance_monitor.py
(+99 files in other folders)
