[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "novaphy"
version = "0.1.0"
description = "A 3D physics engine for embodied intelligence"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Peng Yu"}
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
viz = ["polyscope>=2.2"]
test = ["pytest>=7.0"]
dev = ["novaphy[viz,test]"]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
